--- a/index.html
+++ b/index.html
@@ -534,11 +534,13 @@
             class="pet_food">
           <span class="10pts">15 Points</span>
         </div>
+
         <div class="img">
-          <img src="/resources/imgs/petfood/watermelon.png" onclick="myPet.FeedingPet(9)" alt="watermelon
-            class=" pet_food">
+          <img src="/resources/imgs/petfood/watermelon.png" onclick="myPet.FeedingPet(9)" alt="watermelon"
+            class="pet_food">
           <span class="10pts">15 Points</span>
         </div>
+
       </div>
     </div>
     <div id="getcomplimentBtns">
